--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -3,3 +3,9 @@ body {
     background-color: black;
     text-align: center;
 }
+
+.header--main {
+    font-weight: normal;
+    font-size: 50px;
+    color: white;
+}
