--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -14,3 +14,20 @@ body {
     font-size: 16px;
     color: aquamarine;
 }
+
+.second-title {
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+}
+
+.description-text{
+    font-size: 21px;
+    color: gray;  
+}
+
+.copyright{
+    text-align: right;
+    font-size: 20px;
+    color: gray;
+}
